<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_configuration"
            android:icon="@drawable/ic_drawer_configuration_outline"
            android:title="@string/menu_configuration" />

        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_drawer_group_outline"
            android:title="@string/menu_group" />

        <item
            android:id="@+id/nav_route"
            android:icon="@drawable/ic_drawer_route_outline"
            android:title="@string/menu_route" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_drawer_share_outline"
            android:title="共享" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_drawer_settings_outline"
            android:title="@string/settings" />
    </group>

    <group
        android:id="@+id/misc"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logcat"
            android:icon="@drawable/ic_drawer_logcat_outline"
            android:title="@string/menu_log" />
        <item
            android:id="@+id/nav_traffic"
            android:icon="@drawable/ic_drawer_traffic_outline"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_drawer_tools_outline"
            android:title="@string/menu_tools" />
    </group>

    <group
        android:id="@+id/about"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_drawer_faq_outline"
            android:title="@string/document" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_drawer_about_outline"
            android:title="@string/menu_about" />
    </group>

</menu>