<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    style="@style/Widget.SagerNet.CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="0dp"
    app:strokeWidth="0dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_group_subscription_row_lines">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/subscription_update_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="?colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="8dp"
                android:paddingBottom="12dp">

                <TextView
                    android:id="@+id/group_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textStyle="bold"
                    tools:text="@string/group_name" />

                <TextView
                    android:id="@+id/group_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorSecondary"
                    tools:text="user name" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/pin"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="top"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/group_pin"
                android:focusable="true"
                android:padding="12dp"
                app:srcCompat="@drawable/ic_group_pin_outline" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/edit"
                android:focusable="true"
                android:padding="12dp"
                app:srcCompat="@drawable/ic_group_edit_outline" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                android:nextFocusLeft="@+id/container"
                android:padding="12dp"
                app:srcCompat="@drawable/ic_group_more_outline" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="bottom">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingStart="12.5dp"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/group_traffic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:textColorSecondary"
                    android:visibility="gone"
                    tools:text="@string/subscription_traffic" />

                <TextView
                    android:id="@+id/group_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:textColorSecondary"
                    tools:text="@string/group_status_empty" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/group_update"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/group_update"
                android:textColor="?android:textColorSecondary" />
        </LinearLayout>

    </LinearLayout>

    </FrameLayout>

</com.google.android.material.card.MaterialCardView>
